<resources>
    <string name="app_name">Project with Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_caminhada">Caminhada</string>
    <string name="menu_corrida">Corrida</string>
    <string name="menu_bicilceta">Bicicleta</string>
    <string name="menu_basquete">Basquete</string>
    <string name="menu_inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>