<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.projectwithnavigationdrawer.ui.inicio.Inicio"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_caminhada"
        android:name="com.example.projectwithnavigationdrawer.ui.caminhada.walk_fragment"
        android:label="@string/menu_caminhada"
        tools:layout="@layout/fragment_walk_fragment" />

    <fragment
        android:id="@+id/nav_corrida"
        android:name="com.example.projectwithnavigationdrawer.ui.corrida.fragment_run"
        android:label="@string/menu_corrida"
        tools:layout="@layout/fragment_run" />

    <fragment
        android:id="@+id/nav_bicicleta"
        android:name="com.example.projectwithnavigationdrawer.ui.bike.fragmente_bike"
        android:label="@string/menu_bicilceta"
        tools:layout="@layout/fragment_bike" />

    <fragment
        android:id="@+id/nav_basquete"
        android:name="com.example.projectwithnavigationdrawer.ui.basket.basket_fragment"
        android:label="@string/menu_basquete"
        tools:layout="@layout/fragment_basket" />


</navigation>